// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A <h1> Heading 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 1.5625rem;
  line-height: 2.5rem;
}

<h1
  className="c0"
  fontSize="xxlarge"
  fontWeight="normal"
>
  🥑
</h1>
`;

exports[`A <h1> Heading sized to <h2> 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1.375rem;
  font-weight: 400;
  line-height: 2rem;
}

<h1
  className="c0"
  fontSize="xlarge"
  fontWeight="normal"
>
  🥑
</h1>
`;

exports[`A Heading to bold 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1.125rem;
  font-weight: 700;
  line-height: 1.75rem;
}

<h2
  className="c0"
  fontSize="large"
  fontWeight="bold"
>
  🥑
</h2>
`;

exports[`A Heading transformed 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.75rem;
  text-transform: capitalize;
}

<h2
  className="c0"
  fontSize="large"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A Heading truncated 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.75rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<h2
  className="c0"
  fontSize="large"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A Heading with multiline truncate 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.75rem;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

<h2
  className="c0"
  fontSize="large"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A Heading with variant 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.75rem;
  color: #939BA5;
}

<h2
  className="c0"
  fontSize="large"
  fontWeight="normal"
>
  🥑
</h2>
`;

exports[`A default Heading 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

<h2
  className="c0"
  fontSize="large"
  fontWeight="normal"
>
  🥑
</h2>
`;
